Change colours to solve contrast issue
I've added a modifier class for the next-chapter specifics templates so it does not override any wheelercentre style.

--- a/assets/targets/public-next-chapter/index.css
+++ b/assets/targets/public-next-chapter/index.css
@@ -40,6 +40,15 @@ html {
   color: var(--color-blue);
 }
 
+.next-chapter-header h2 {
+  color: #757575;
+}
+.next-chapter-header time {
+  color: #757575;
+}
+
+
+
 @import "./masthead";
 @import "./masthead/nav.css";
 @import "./footer";
